crates/wit-parser/tests/ui/parse-fail/include-cycle.wit
world a {
    include self.b
}

default world b {
    include self.a
}